Core: Add DSA Validations (#3133)